--- a/src/template.tmpl
+++ b/src/template.tmpl
@@ -6,13 +6,15 @@ package {{ . }}
 
 import (
     "fmt"
-    "encoding/json")
+    "encoding/json"
+    "strconv"
+)
 {{ end }}
 
 {{ define "struct_type" }}
 type {{ .Name }}Vgen struct {
     {{- range .Fields }}
-        {{ .Name }} *{{ .Type -}}
+        {{ .Name }} *{{ .Typ -}}
     {{ end }}
 }
 {{ end }}
@@ -22,13 +24,12 @@ func (t {{ .Name }}Vgen) Validate() ({{ .Name }}, error) {
     res := {{ .Name }}{}
     errs := make(map[string][]string)
 
-    {{- range .Fields }}
-        // {{ .Name }} {{ .Type }}
+    {{ range .Fields }}
         if t.{{ .Name }} != nil {
             {{ lowerFirstFunc .Name }} := *t.{{ .Name }}
-            {{- range .Rules }}
-                {{ ruleFunc . -}}
-            {{ end }}
+
+            {{ .RulesCode }}
+
             res.{{ .Name }} = {{ lowerFirstFunc .Name }}
         }  {{ if .Required }} else {
                 errs["{{ lowerFirstFunc .Name }}"] = append(errs["{{ lowerFirstFunc .Name }}"], fmt.Sprintf("required"))
@@ -42,4 +43,22 @@ func (t {{ .Name }}Vgen) Validate() ({{ .Name }}, error) {
 
     return res, nil
 }
+{{ end }}
+
+{{ define "primitive_field_validation"}}
+   {{ range .Rules }} 
+        {{ tmpl .Func . }}
+   {{ end }}
+{{ end }}
+
+{{ define "list_field_validation"}}
+    {{ range .ListRules }} 
+        {{ tmpl .Func . }}
+    {{ end }}
+
+    for i, {{ lowerFirstFunc .Name }} := range {{ lowerFirstFunc .Name }} {
+        {{ range .ValueRules }} 
+            {{ tmpl .Func . }}
+        {{ end }}
+    }
 {{ end }}
