replaced itoa with %d in list rules

--- a/src/rules.tmpl
+++ b/src/rules.tmpl
@@ -72,62 +72,62 @@ if err := {{ .Value }}({{ lowerFirstFunc .FieldName}}); err != nil {
 
 {{ define ":len_gt" }}
 if !(len({{ lowerFirstFunc .FieldName }}) > {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `len must be greater than {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be greater than {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":len_lt" }}
 if !(len({{ lowerFirstFunc .FieldName }}) < {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `len must be less than {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be less than {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":len_gte" }}
 if !(len({{ lowerFirstFunc .FieldName }}) >= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `len must be greater than or equal to {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be greater than or equal to {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":len_lte" }}
 if !(len({{ lowerFirstFunc .FieldName }}) <= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `len must be less than or equal to {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be less than or equal to {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":not_empty" }}
 if !(len({{ lowerFirstFunc .FieldName }}) > 0) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `can not be empty`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: can not be empty`, i))
 }
 {{ end }}
 
 
 {{ define ":gt" }}
 if !({{ lowerFirstFunc .FieldName }} > {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `must be greater than {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be greater than {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":lt" }}
 if !({{ lowerFirstFunc .FieldName }} < {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `must be less than {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be less than {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":gte" }}
 if !({{ lowerFirstFunc .FieldName }} >= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `must be greater than or equal to {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be greater than or equal to {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":lte" }}
 if !({{ lowerFirstFunc .FieldName }} <= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `must be less than or equal to {{ .Value }}`))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be less than or equal to {{ .Value }}`, i))
 }
 {{ end }}
 
 {{ define ":custom" }}
 if err := {{ .Value }}({{ lowerFirstFunc .FieldName}}); err != nil {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(strconv.Itoa(i) + ":" + `failed custom {{ .Value }}: %v`, err))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: failed custom {{ .Value }}: %v`, i, err))
 }
 {{ end }}
 
