changed error format, working on nested types

--- a/src/rules.tmpl
+++ b/src/rules.tmpl
@@ -60,7 +60,18 @@ if !({{ lowerFirstFunc .FieldName }} <= {{ .Value }}) {
 
 {{ define "custom" }}
 if err := {{ .Value }}({{ lowerFirstFunc .FieldName}}); err != nil {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`failed custom {{ .Value }}: %v`, err))
+    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%v`, err))
+}
+{{ end }}
+
+{{/* NESTED */}}
+
+{{ define "i" }}
+{{ lowerFirstFunc .FieldName }}, err := {{ lowerFirstFunc .FieldName }}.innerValidation("")
+if err != nil {
+    for k, v := range err {
+        errs["{{ lowerFirstFunc .FieldName }}."+k] = append(errs["address2."+k], v...)
+    }
 }
 {{ end }}
 
@@ -72,62 +83,61 @@ if err := {{ .Value }}({{ lowerFirstFunc .FieldName}}); err != nil {
 
 {{ define ":len_gt" }}
 if !(len({{ lowerFirstFunc .FieldName }}) > {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be greater than {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`len must be greater than {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":len_lt" }}
 if !(len({{ lowerFirstFunc .FieldName }}) < {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be less than {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`len must be less than {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":len_gte" }}
 if !(len({{ lowerFirstFunc .FieldName }}) >= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be greater than or equal to {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`len must be greater than or equal to {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":len_lte" }}
 if !(len({{ lowerFirstFunc .FieldName }}) <= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: len must be less than or equal to {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`len must be less than or equal to {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":not_empty" }}
 if !(len({{ lowerFirstFunc .FieldName }}) > 0) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: can not be empty`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`can not be empty`))
 }
 {{ end }}
 
-
 {{ define ":gt" }}
 if !({{ lowerFirstFunc .FieldName }} > {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be greater than {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`must be greater than {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":lt" }}
 if !({{ lowerFirstFunc .FieldName }} < {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be less than {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`must be less than {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":gte" }}
 if !({{ lowerFirstFunc .FieldName }} >= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be greater than or equal to {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`must be greater than or equal to {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":lte" }}
 if !({{ lowerFirstFunc .FieldName }} <= {{ .Value }}) {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: must be less than or equal to {{ .Value }}`, i))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`must be less than or equal to {{ .Value }}`))
 }
 {{ end }}
 
 {{ define ":custom" }}
 if err := {{ .Value }}({{ lowerFirstFunc .FieldName}}); err != nil {
-    errs["{{ lowerFirstFunc .FieldName }}"] = append(errs["{{ lowerFirstFunc .FieldName }}"], fmt.Sprintf(`%d: failed custom {{ .Value }}: %v`, i, err))
+    errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix] = append(errs[prefix + "{{ lowerFirstFunc .FieldName }}" + suffix], fmt.Sprintf(`%v`, err))
 }
 {{ end }}
 
