--- a/src/template.tmpl
+++ b/src/template.tmpl
@@ -23,7 +23,7 @@ type {{ .Name }}Vgen struct {
 {{ define "struct_validation" }}
 func (t {{ .Name }}Vgen) Validate() ({{ .Name }}, error) {
     // TODO add output formatting here
-    {{ lowerFirstFunc .Name }}, errs :=  t.innerValidation("")
+    {{ lowerFirstFunc .Name }}, errs :=  t.innerValidation()
     if len(errs) > 0 {
         j, _ := json.Marshal(errs)
         return {{ .Name }}{}, fmt.Errorf("%s", j)
@@ -31,13 +31,12 @@ func (t {{ .Name }}Vgen) Validate() ({{ .Name }}, error) {
     return {{ lowerFirstFunc .Name }}, nil
 }
 
-func (t {{ .Name }}Vgen) innerValidation(prefix string) ({{ .Name }}, map[string][]string) {
+func (t {{ .Name }}Vgen) innerValidation() ({{ .Name }}, map[string][]string) {
     res := {{ .Name }}{}
     errs := make(map[string][]string)
 
     {{ range .Fields }}
         if t.{{ .Name }} != nil {
-            {{ lowerFirstFunc .Name }} := *t.{{ .Name }}
 
             {{ .FieldValidationCode }}
 
@@ -56,18 +55,20 @@ func (t {{ .Name }}Vgen) innerValidation(prefix string) ({{ .Name }}, map[string
 {{ end }}
 
 {{ define "primitive_field_validation"}}
+    {{ lowerFirstFunc .Name }} := *t.{{ .Name }}
    {{ range .Rules }} 
         {{ .RuleValidationCode }}
    {{ end }}
 {{ end }}
 
 {{ define "list_field_validation"}}
+    {{ lowerFirstFunc .Name }} := *t.{{ .Name }}
     {{ range .ListRules }} 
         {{ .RuleValidationCode }}
     {{ end }}
 
     for i, {{ lowerFirstFunc .Name }} := range {{ lowerFirstFunc .Name }} {
-		suffix := fmt.Sprintf("[%d]", i)
+		index := fmt.Sprintf("[%d]", i)
         {{ range .ValueRules }} 
             {{ .RuleValidationCode }}
         {{ end }}
@@ -75,12 +76,15 @@ func (t {{ .Name }}Vgen) innerValidation(prefix string) ({{ .Name }}, map[string
 {{ end }}
 
 {{ define "type_field_validation"}}
-    // TODO
-    // // i
-    // address2, err := address.innerValidation("")
-    // if err != nil {
-    // 	for k, v := range err {
-    // 		errs["address2"+k] = append(errs["address2."+k], v...)
-    // 	}
-    // }
+    {{ lowerFirstFunc .Name }}, err := t.{{ .Name }}.innerValidation()
+    if err != nil {
+        for k, v := range err {
+            errs["{{ lowerFirstFunc .Name }}."+k] = append(errs["{{ lowerFirstFunc .Name }}."+k], v...)
+        }
+    } else {
+       {{ range .Rules }} 
+            {{ .RuleValidationCode }}
+       {{ end }}
+    }
+
 {{ end }}
